SF Primes/src/objects/TRV_Skillset__c.object
<CustomObject>
    <fields>
        <fullName>TRV_B4B_Coaching__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>B4B Coaching</label>
        <referenceTo>Traver_Coaching__c</referenceTo>
        <relationshipName>B4B_Coaching_Skillsets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRV_Expertise_Major__c</fullName>
        <label>Expertise Major</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Operations</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Sales Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Expertise_Minor__c</fullName>
        <label>Expertise Minor</label>
        <picklist>
            <controllingField>TRV_Expertise_Major__c</controllingField>
            <picklistValues>
                <fullName>180</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Acctg Interfaces from Fixed</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Menu</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Vehicle</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Review</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Desking</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Contracting</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Deal Jacket</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>DSP/ERO/TWB</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>E-Payments</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Mining</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I Sales</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ford Knowledge</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Lot Manager</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>MIS Reports</fullName>
                <color>#EFAE73</color>
            </picklistValues>
            <picklistValues>
                <fullName>MS Excel</fullName>
                <color>#57F17C</color>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Company</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>OFAC/Red Flag Compliance</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Partscan</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Plus</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>PDM</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Process Mapping (Traver)</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Orders</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>ServiceEdge</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Grids</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>SMARTT</fullName>
                <color>#2F5D85</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>TRV_Resource__c</referenceTo>
        <relationshipName>Resource_Skillsets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRV_Skill_Level_Major__c</fullName>
        <inlineHelpText>0 = N/A
1 = In Training
2 = Competent
3 = Proficient
4 = Expert</inlineHelpText>
        <label>Skill Level - Major</label>
        <picklist>
            <controllingField>TRV_Expertise_Major__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Skill_Level_Minor__c</fullName>
        <inlineHelpText>0 = N/A
1 = In Training
2 = Competent
3 = Proficient
4 = Expert</inlineHelpText>
        <label>Skill Level - Minor</label>
        <picklist>
            <controllingField>TRV_Expertise_Minor__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Skill_Set_Number__c</fullName>
        <displayFormat>Skills-{00000}</displayFormat>
        <label>Skill Set Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Skillset</label>
    <nameField>
        <label>Skillset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skillsets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>